prometheus-operator/dev/endpoint-patches.yaml
# Source: prometheus-operator/templates/exporters/kube-etcd/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-operator-kube-etcd
  namespace: kube-system
subsets:
  - addresses:
      - hostname: node1
        ip: 192.168.0.11
      - hostname: node2
        ip: 192.168.0.12
      - hostname: node3
        ip: 192.168.0.13
    ports:
      - name: http-metrics
        port: 2379
        protocol: TCP

---
# Source: prometheus-operator/templates/exporters/kube-controller-manager/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-operator-kube-controller-manager
  namespace: kube-system
subsets:
  - addresses:
      - hostname: node1
        ip: 192.168.0.11
      - hostname: node2
        ip: 192.168.0.12
      - hostname: node3
        ip: 192.168.0.13
    ports:
      - name: http-metrics
        port: 10252
        protocol: TCP
---
# Source: prometheus-operator/templates/exporters/kube-scheduler/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-operator-kube-scheduler
  namespace: kube-system
subsets:
  - addresses:
      - hostname: node1
        ip: 192.168.0.11
      - hostname: node2
        ip: 192.168.0.12
      - hostname: node3
        ip: 192.168.0.13
    ports:
      - name: http-metrics
        port: 10251
        protocol: TCP
