prometheus-operator/dev/ingressroute-patch-alertmanager.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  routes:
    - match: Host(`alertmanager.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: prometheus-operator-alertmanager
          port: 9093
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-tls
spec:
  routes:
    - match: Host(`alertmanager.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: prometheus-operator-alertmanager
          port: 9093
