prometheus-operator/dev/ingressroute-patch-grafana.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  routes:
    - match: Host(`grafana.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
spec:
  routes:
    - match: Host(`grafana.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
